vcluster_versioned_docs/version-0.26.0/_partials/config/controlPlane/statefulSet.mdx

<details className="config-field" data-expandable="true">
<summary>

## `statefulSet` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet}

StatefulSet defines options for vCluster statefulSet deployed by Helm.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `highAvailability` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-highAvailability}

HighAvailability holds options related to high availability.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `replicas` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> {#statefulSet-highAvailability-replicas}

Replicas is the amount of replicas to use for the statefulSet.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `leaseDuration` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">60</span> <span className="config-field-enum"></span> {#statefulSet-highAvailability-leaseDuration}

LeaseDuration is the time to lease for the leader.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `renewDeadline` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">40</span> <span className="config-field-enum"></span> {#statefulSet-highAvailability-renewDeadline}

RenewDeadline is the deadline to renew a lease for the leader.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `retryPeriod` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">15</span> <span className="config-field-enum"></span> {#statefulSet-highAvailability-retryPeriod}

RetryPeriod is the time until a replica will retry to get a lease.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-resources}

Resources are the resource requests and limits for the statefulSet container.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `limits` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;ephemeral-storage:8Gi memory:2Gi&#93;</span> <span className="config-field-enum"></span> {#statefulSet-resources-limits}

Limits are resource limits for the container

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `requests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:200m ephemeral-storage:400Mi memory:256Mi&#93;</span> <span className="config-field-enum"></span> {#statefulSet-resources-requests}

Requests are minimal resources that will be consumed by the container

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `scheduling` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-scheduling}

Scheduling holds options related to scheduling.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-scheduling-nodeSelector}

NodeSelector is the node selector to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `affinity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-scheduling-affinity}

Affinity is the affinity to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `tolerations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-scheduling-tolerations}

Tolerations are the tolerations to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `priorityClassName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-scheduling-priorityClassName}

PriorityClassName is the priority class name for the the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `podManagementPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">Parallel</span> <span className="config-field-enum"></span> {#statefulSet-scheduling-podManagementPolicy}

PodManagementPolicy is the statefulSet pod management policy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `topologySpreadConstraints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-scheduling-topologySpreadConstraints}

TopologySpreadConstraints are the topology spread constraints for the pod.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `security` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-security}

Security defines pod or container security context.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `podSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-security-podSecurityContext}

PodSecurityContext specifies security context options on the pod level.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `containerSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;allowPrivilegeEscalation:false runAsGroup:0 runAsUser:0&#93;</span> <span className="config-field-enum"></span> {#statefulSet-security-containerSecurityContext}

ContainerSecurityContext specifies security context options on the container level.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `probes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-probes}

Probes enables or disables the main container probes.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `livenessProbe` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe}

LivenessProbe specifies if the liveness probe for the container should be enabled

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failureThreshold` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">60</span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe-failureThreshold}

Number of consecutive failures for the probe to be considered failed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `initialDelaySeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">60</span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe-initialDelaySeconds}

Time (in seconds) to wait before starting the liveness probe

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">3</span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe-timeoutSeconds}

Maximum duration (in seconds) that the probe will wait for a response.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `periodSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">2</span> <span className="config-field-enum"></span> {#statefulSet-probes-livenessProbe-periodSeconds}

Frequency (in seconds) to perform the probe

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `readinessProbe` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-probes-readinessProbe}

ReadinessProbe specifies if the readiness probe for the container should be enabled

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#statefulSet-probes-readinessProbe-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failureThreshold` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">60</span> <span className="config-field-enum"></span> {#statefulSet-probes-readinessProbe-failureThreshold}

Number of consecutive failures for the probe to be considered failed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">3</span> <span className="config-field-enum"></span> {#statefulSet-probes-readinessProbe-timeoutSeconds}

Maximum duration (in seconds) that the probe will wait for a response.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `periodSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">2</span> <span className="config-field-enum"></span> {#statefulSet-probes-readinessProbe-periodSeconds}

Frequency (in seconds) to perform the probe

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `startupProbe` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-probes-startupProbe}

StartupProbe specifies if the startup probe for the container should be enabled

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#statefulSet-probes-startupProbe-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failureThreshold` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">300</span> <span className="config-field-enum"></span> {#statefulSet-probes-startupProbe-failureThreshold}

Number of consecutive failures allowed before failing the pod

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">3</span> <span className="config-field-enum"></span> {#statefulSet-probes-startupProbe-timeoutSeconds}

Maximum duration (in seconds) that the probe will wait for a response.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `periodSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">6</span> <span className="config-field-enum"></span> {#statefulSet-probes-startupProbe-periodSeconds}

Frequency (in seconds) to perform the probe

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `persistence` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence}

Persistence defines options around persistence for the statefulSet.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `volumeClaim` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim}

VolumeClaim can be used to configure the persistent volume claim.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string|boolean</span> <span className="config-field-default">auto</span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim-enabled}

Enabled enables deploying a persistent volume claim. If auto, vCluster will automatically determine
based on the chosen distro and other options if this is required.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `accessModes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;ReadWriteOnce&#93;</span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim-accessModes}

AccessModes are the persistent volume claim access modes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `retentionPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">Retain</span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim-retentionPolicy}

RetentionPolicy is the persistent volume claim retention policy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `size` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">5Gi</span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim-size}

Size is the persistent volume claim storage size.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `storageClass` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaim-storageClass}

StorageClass is the persistent volume claim storage class.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `volumeClaimTemplates` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-persistence-volumeClaimTemplates}

VolumeClaimTemplates defines the volumeClaimTemplates for the statefulSet

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `dataVolume` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-persistence-dataVolume}

Allows you to override the dataVolume. Only works correctly if volumeClaim.enabled=false.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `binariesVolume` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;map&#91;emptyDir:map&#91;&#93; name:binaries&#93;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-persistence-binariesVolume}

BinariesVolume defines a binaries volume that is used to retrieve
distro specific executables to be run by the syncer controller.
This volume doesn't need to be persistent.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `addVolumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumes}

AddVolumes defines extra volumes for the pod

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `addVolumeMounts` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts}

AddVolumeMounts defines extra volume mounts for the container

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-name}

This must match the Name of a Volume.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `readOnly` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-readOnly}

Mounted read-only if true, read-write otherwise (false or unspecified).
Defaults to false.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `mountPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-mountPath}

Path within the container at which the volume should be mounted.  Must
not contain ':'.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-subPath}

Path within the volume from which the container's volume should be mounted.
Defaults to "" (volume's root).

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `mountPropagation` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-mountPropagation}

mountPropagation determines how mounts are propagated from the host
to container and the other way around.
When not set, MountPropagationNone is used.
This field is beta in 1.10.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPathExpr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-persistence-addVolumeMounts-subPathExpr}

Expanded path within the volume from which the container's volume should be mounted.
Behaves similarly to SubPath but environment variable references $(VAR_NAME) are expanded using the container's environment.
Defaults to "" (volume's root).
SubPathExpr and SubPath are mutually exclusive.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `enableServiceLinks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#statefulSet-enableServiceLinks}

EnableServiceLinks for the StatefulSet pod

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-labels}

Labels are extra labels for this resource.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `pods` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-pods}

Additional labels or annotations for the statefulSet pods.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-pods-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#statefulSet-pods-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-image}

Image is the image for the controlPlane statefulSet container

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `registry` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">ghcr.io</span> <span className="config-field-enum"></span> {#statefulSet-image-registry}

Configure the registry of the container image, e.g. my-registry.com or ghcr.io
It defaults to ghcr.io and can be overriding either by using this field or controlPlane.advanced.defaultImageRegistry

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `repository` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">loft-sh/vcluster-pro</span> <span className="config-field-enum"></span> {#statefulSet-image-repository}

Configure the repository of the container image, e.g. my-repo/my-image.
It defaults to the vCluster pro repository that includes the optional pro modules that are turned off by default.
If you still want to use the pure OSS build, use 'loft-sh/vcluster-oss' instead.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `tag` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-image-tag}

Tag is the tag of the container image, e.g. latest

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `workingDir` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-workingDir}

WorkingDir specifies in what folder the main process should get started.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `command` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-command}

Command allows you to override the main command.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `args` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-args}

Args allows you to override the main arguments.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `env` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#statefulSet-env}

Env are additional environment variables for the statefulSet container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `dnsPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsPolicy}

Set DNS policy for the pod.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `dnsConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig}

Specifies the DNS parameters of a pod.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `nameservers` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig-nameservers}

A list of DNS name server IP addresses.
This will be appended to the base nameservers generated from DNSPolicy.
Duplicated nameservers will be removed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `searches` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig-searches}

A list of DNS search domains for host-name lookup.
This will be appended to the base search paths generated from DNSPolicy.
Duplicated search paths will be removed.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `options` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig-options}

A list of DNS resolver options.
This will be merged with the base options generated from DNSPolicy.
Duplicated entries will be removed. Resolution options given in Options
will override those that appear in the base DNSPolicy.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig-options-name}

Required.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#statefulSet-dnsConfig-options-value}



</summary>



</details>


</details>


</details>


</details>
